// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeroSearchComponent Layout hero list should contain hero list with hero names and hero id as routerLink attribute 1`] = `
<ul
  automation-id="search-result"
  class="search-result"
  pw-automation-id="search-result"
>
  <li>
    <a
      automation-id="search-link"
      pw-automation-id="search-link"
    >
       Dr. Nice 
    </a>
    
  </li>
  <li>
    <a
      automation-id="search-link"
      pw-automation-id="search-link"
    >
       Bombasto 
    </a>
    
  </li>
  <li>
    <a
      automation-id="search-link"
      pw-automation-id="search-link"
    >
       Celeritas 
    </a>
    
  </li>
  
</ul>
`;

exports[`HeroSearchComponent Layout hero list should contain hero list with hero names and hero id as routerLink attribute 2`] = `
<a
  automation-id="search-link"
  pw-automation-id="search-link"
>
   Dr. Nice 
</a>
`;

exports[`HeroSearchComponent Layout hero list should contain hero list with hero names and hero id as routerLink attribute 3`] = `
<a
  automation-id="search-link"
  pw-automation-id="search-link"
>
   Bombasto 
</a>
`;

exports[`HeroSearchComponent Layout hero list should contain hero list with hero names and hero id as routerLink attribute 4`] = `
<a
  automation-id="search-link"
  pw-automation-id="search-link"
>
   Celeritas 
</a>
`;

exports[`HeroSearchComponent Layout should contain div wrapper 1`] = `
<div
  automation-id="search-component"
  id="search-component"
  pw-automation-id="search-component"
>
  <label
    automation-id="search-label"
    for="search-box"
    pw-automation-id="search-label"
  >
    Hero Search
  </label>
  <input
    automation-id="search-input"
    id="search-box"
    pw-automation-id="search-input"
  />
  <ul
    automation-id="search-result"
    class="search-result"
    pw-automation-id="search-result"
  >
    
  </ul>
</div>
`;

exports[`HeroSearchComponent Layout should contain label and input for typing 1`] = `
<label
  automation-id="search-label"
  for="search-box"
  pw-automation-id="search-label"
>
  Hero Search
</label>
`;

exports[`HeroSearchComponent Layout should contain label and input for typing 2`] = `
<input
  automation-id="search-input"
  id="search-box"
  pw-automation-id="search-input"
/>
`;
